syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "BattlePassRewardTag.proto";

message BattlePassRewardTakeOption {
	BattlePassRewardTag tag = 1;
	uint32 option_idx = 2;
}
