syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ItemParam.proto";

message OHOKEEGPPBG {
	uint32 uid = 1;
	repeated ItemParam reward_item_list = 2;
}
