syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "BattlePassRewardTakeOption.proto";
import "ItemParam.proto";

// CmdId: 2603
// EnetChannelId: 0
// EnetIsReliable: true
message TakeBattlePassRewardRsp {
	int32 retcode = 2;
	repeated BattlePassRewardTakeOption take_option_list = 1;
	repeated ItemParam item_list = 5;
}
